--- a/vaktmesteren_server/.gitignore
+++ b/vaktmesteren_server/.gitignore
@@ -11,5 +11,8 @@ doc/api/
 # Passwords file
 config/passwords.yaml
 
+# Icinga2 configuration (contains secrets)
+config/icinga2.yaml
+
 # Firebase service account key for Firebase auth
 config/firebase_service_account_key.json
