--- a/vaktmesteren_server/config/test.yaml
+++ b/vaktmesteren_server/config/test.yaml
@@ -53,3 +53,7 @@ sessionLogs:
 #futureCall:
 #  concurrencyLimit: 1 # Defaults to 1, a negative or null value removes the limit
 #  scanInterval: 5000 # Unit in milliseconds, defaults to 5000
+
+# How long to retain alert history (in days). Rows older than this will be
+# deleted by the retention job. Default: 3
+retention_days: 3
