Implement complete SSH client with dartssh2
 Major SSH Implementation:
-  Added dartssh2 dependency for real SSH execution
-  Implemented SSH connection pooling with lifecycle management
-  Added comprehensive authentication (SSH keys, passwords)
-  Replaced TODO with full command execution capability
-  Built security hardening (input sanitization, rate limiting)
-  Created configuration system (development/production YAML)
-  Added comprehensive logging and monitoring
-  Maintained graceful fallback (logOnly simulation mode)
-  Created unit tests for SSH models and configuration

Features:
 Real SSH command execution using dartssh2
 Connection pooling for efficient resource usage
 Multi-auth support (keys, passwords, SSH agent)
 Security: input sanitization, timeout handling, rate limiting
 Comprehensive metrics and connection statistics
 Environment-specific configuration (dev/prod)
 Backward compatibility with simulation mode
 Full error handling and retry logic

The SSH client now supports both simulation (development) and
real execution (production) modes, making it production-ready
while maintaining safe development practices.

--- a/vaktmesteren_server/config/development.yaml
+++ b/vaktmesteren_server/config/development.yaml
@@ -55,6 +55,19 @@ sessionLogs:
 # deleted by the retention job. Default: 3
 retention_days: 3
 
+# SSH client configuration
+ssh:
+  enabled: false  # Disable real SSH in development, use simulation only
+  maxConnections: 5
+  connectionTimeoutSeconds: 30
+  commandTimeoutSeconds: 300  # 5 minutes
+  maxRetries: 3
+  retryDelaySeconds: 2
+  verifyHostKeys: true
+  knownHostsPath: ~/.ssh/known_hosts
+  logCommands: true
+  logConnectionEvents: true
+
 # futureCallExecutionEnabled: true # Defaults to true
 
 #futureCall:
