security: ignore entire config/external/ directory except README
Enhanced security by excluding all files in config/external/ from version control
to prevent accidentally committing any sensitive configuration files.

Changes:
- Updated .gitignore to use config/external/* (excludes all files)
- Added exception for config/external/README.md (safe documentation)
- Removed tracked sensitive config files from git:
  * config/external/icinga2.yaml
  * config/external/portainer_ci_cd.yaml
  * config/external/ssh_restart.yaml
  * config/external/teams_notifications.yaml

Files remain locally for runtime use but are no longer tracked by git.
Template files in config/external_templates/ remain available for setup.

--- a/vaktmesteren_server/.gitignore
+++ b/vaktmesteren_server/.gitignore
@@ -12,11 +12,9 @@ doc/api/
 config/passwords.yaml
 
 # External service configurations (contain secrets)
-# These files are now in config/external/ and should not be committed with real credentials
-config/external/icinga2.yaml
-config/external/ssh_restart.yaml
-config/external/teams_notifications.yaml
-config/external/portainer_ci_cd.yaml
+# Exclude entire external directory to prevent committing any sensitive configs
+config/external/*
+!config/external/README.md
 
 # Firebase service account key for Firebase auth
 config/firebase_service_account_key.json
